[project]
name = "subtract"
version = "0.1.0"
description = "Remove words from subtitles"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pysubs2>=1.7.3",
    "supercut>=0.4.0",
]

[project.scripts]
subtract = "subtract.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
